--- a/apps/AppIconCreator.html
+++ b/apps/AppIconCreator.html
@@ -47,10 +47,10 @@
 <h2 id="screenshots">Screenshots</h2>
 
 <p>Drag and drop your images into the application:
-<img src="en/screenshot.png" alt="" /></p>
+<img src="/assets/AppIconCreator/en/screenshot.png" alt="" /></p>
 
 <p>Click on the disk symbols to save PNG files, Windows ICO iconsets, MacOS ICO files, or Zip archives:
-<img src="en/screenshot2.png" alt="" /></p>
+<img src="/assets/AppIconCreator/en/screenshot2.png" alt="" /></p>
 
 
       </div>
