--- a/de/apps/AppIconCreator.html
+++ b/de/apps/AppIconCreator.html
@@ -47,10 +47,10 @@
 <h2 id="bildschirmfotos">Bildschirmfotos</h2>
 
 <p>SVG und/oder PNG-Dateien per Drag&amp;Drop importieren:
-<img src="de/screenshot.png" alt="" /></p>
+<img src="/assets/AppIconCreator/de/screenshot.png" alt="" /></p>
 
 <p>Durch Klick auf eines der Diskettensymbole als PNG-Datei, Windows ICO Iconsets, MacOS ICO files oder Zip-Archiv speichern:
-<img src="de/screenshot2.png" alt="" /></p>
+<img src="/assets/AppIconCreator/de/screenshot2.png" alt="" /></p>
 
 
       </div>
