--- a/fr/apps/AppIconCreator.html
+++ b/fr/apps/AppIconCreator.html
@@ -47,10 +47,10 @@
 <h2 id="images">Images</h2>
 
 <p>Glisser-déposer les images:
-<img src="fr/screenshot.png" alt="" /></p>
+<img src="/assets/AppIconCreator/fr/screenshot.png" alt="" /></p>
 
 <p>Cliquez sur les symboles de disque pour enregistrer les fichiers PNG, les jeux d’icônes ICO de Windows, les fichiers ICO de MacOS ou les archives Zip: 
-<img src="fr/screenshot2.png" alt="" /></p>
+<img src="/assets/AppIconCreator/fr/screenshot2.png" alt="" /></p>
 
 
       </div>
