--- a/apps/AppIconCreator.html
+++ b/apps/AppIconCreator.html
@@ -52,6 +52,10 @@
 <p>Click on the disk symbols to save PNG files, Windows ICO iconsets, MacOS ICO files, or Zip archives:
 <img src="/assets/AppIconCreator/en/screenshot2.png" alt="" /></p>
 
+<h1 id="privacy">Privacy</h1>
+
+<p>This application does not collect/share any data. Read the <a href="privacy">privacy policy</a> for details.</p>
+
 
       </div>
     </main><footer class="site-footer h-card">
