--- a/de/apps/AppIconCreator.html
+++ b/de/apps/AppIconCreator.html
@@ -52,6 +52,10 @@
 <p>Durch Klick auf eines der Diskettensymbole als PNG-Datei, Windows ICO Iconsets, MacOS ICO files oder Zip-Archiv speichern:
 <img src="/assets/AppIconCreator/de/screenshot2.png" alt="" /></p>
 
+<h1 id="datenschutz">Datenschutz</h1>
+
+<p>Diese Applikation sammelt und versendet keine Daten. Für Details lesen Sie die <a href="privacy">Datenschutzerklärung</a>.</p>
+
 
       </div>
     </main><footer class="site-footer h-card">
