--- a/fr/apps/AppIconCreator.html
+++ b/fr/apps/AppIconCreator.html
@@ -52,6 +52,10 @@
 <p>Cliquez sur les symboles de disque pour enregistrer les fichiers PNG, les jeux d’icônes ICO de Windows, les fichiers ICO de MacOS ou les archives Zip: 
 <img src="/assets/AppIconCreator/fr/screenshot2.png" alt="" /></p>
 
+<h1 id="confidentialité">Confidentialité</h1>
+
+<p>Cette application ne collecte ni n’envoie de données. Pour plus de détails, veuillez lire la <a href="privacy">politique de confidentialité</a>.</p>
+
 
       </div>
     </main><footer class="site-footer h-card">
