--- a/de/apps/AppIconCreator.html
+++ b/de/apps/AppIconCreator.html
@@ -54,7 +54,7 @@
 
 <h1 id="datenschutz">Datenschutz</h1>
 
-<p>Diese Applikation sammelt und versendet keine Daten. Für Details lesen Sie die <a href="privacy">Datenschutzerklärung</a>.</p>
+<p>Diese Applikation sammelt und versendet keine Daten. Für Details lesen Sie die <a href="./privacy">Datenschutzerklärung</a>.</p>
 
 
       </div>
