--- a/fr/apps/AppIconCreator.html
+++ b/fr/apps/AppIconCreator.html
@@ -54,7 +54,7 @@
 
 <h1 id="confidentialité">Confidentialité</h1>
 
-<p>Cette application ne collecte ni n’envoie de données. Pour plus de détails, veuillez lire la <a href="privacy">politique de confidentialité</a>.</p>
+<p>Cette application ne collecte ni n’envoie de données. Pour plus de détails, veuillez lire la <a href="./privacy">politique de confidentialité</a>.</p>
 
 
       </div>
