--- a/apps/AppIconCreator.html
+++ b/apps/AppIconCreator.html
@@ -54,7 +54,7 @@
 
 <h1 id="privacy">Privacy</h1>
 
-<p>This application does not collect/share any data. Read the <a href="./privacy">privacy policy</a> for details.</p>
+<p>This application does not collect/share any data. Read the <a href="privacy">privacy policy</a> for details.</p>
 
 
       </div>
