--- a/fr/apps/AppIconCreator/privacy/index.html
+++ b/fr/apps/AppIconCreator/privacy/index.html
@@ -9,7 +9,7 @@
 <meta property="og:locale" content="fr" />
 <meta property="og:site_name" content="dua3" />
 <script type="application/ld+json">
-{"@type":"WebPage","headline":"App Icon Generator - Privacy Policy","url":"/fr/apps/AppIconCreator/privacy","@context":"https://schema.org"}</script>
+{"@type":"WebPage","headline":"App Icon Generator - Privacy Policy","url":"/fr/apps/AppIconCreator/privacy/index","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/fr/assets/main.css"><link type="application/atom+xml" rel="alternate" href="/fr/feed.xml" title="dua3" /></head>
 <body><header class="site-header" role="banner">
@@ -24,7 +24,7 @@
           </span>
         </label>
 
-        <div class="trigger"><a class="page-link" href="/fr/">home</a><a class="page-link" href="/fr/apps">apps</a><a class="page-link" href="/fr/imprint">imprint</a></div>
+        <div class="trigger"><a class="page-link" href="/fr/">home</a><a class="page-link" href="/fr/apps/index">apps</a><a class="page-link" href="/fr/imprint">imprint</a></div>
       </nav></div>
 </header>
 <main class="page-content" aria-label="Content">
