--- a/apps.html
+++ b/apps.html
@@ -24,7 +24,7 @@
           </span>
         </label>
 
-        <div class="trigger"><a class="page-link" href="/">home</a><a class="page-link" href="/apps">apps</a><a class="page-link" href="/imprint">imprint</a></div>
+        <div class="trigger"><a class="page-link" href="/">home</a><a class="page-link" href="/apps/index">apps</a><a class="page-link" href="/imprint">imprint</a></div>
       </nav></div>
 </header>
 <main class="page-content" aria-label="Content">
