--- a/de/apps.html
+++ b/de/apps.html
@@ -24,7 +24,7 @@
           </span>
         </label>
 
-        <div class="trigger"><a class="page-link" href="/de/">home</a><a class="page-link" href="/de/apps">apps</a><a class="page-link" href="/de/imprint">imprint</a></div>
+        <div class="trigger"><a class="page-link" href="/de/">home</a><a class="page-link" href="/de/apps/index">apps</a><a class="page-link" href="/de/imprint">imprint</a></div>
       </nav></div>
 </header>
 <main class="page-content" aria-label="Content">
