--- a/en/apps/AppIconCreator/privacy/index.html
+++ b/en/apps/AppIconCreator/privacy/index.html
@@ -9,12 +9,12 @@
 <meta property="og:locale" content="en" />
 <meta property="og:site_name" content="dua3" />
 <script type="application/ld+json">
-{"@type":"WebPage","headline":"App Icon Generator - Privacy Policy","url":"/apps/AppIconCreator/privacy","@context":"https://schema.org"}</script>
+{"@type":"WebPage","headline":"App Icon Generator - Privacy Policy","url":"/en/apps/AppIconCreator/privacy/index","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
-<link rel="stylesheet" href="/assets/main.css"><link type="application/atom+xml" rel="alternate" href="/feed.xml" title="dua3" /></head>
+<link rel="stylesheet" href="/en/assets/main.css"><link type="application/atom+xml" rel="alternate" href="/en/feed.xml" title="dua3" /></head>
 <body><header class="site-header" role="banner">
 
-  <div class="wrapper"><a class="site-title" rel="author" href="/">dua3</a><nav class="site-nav">
+  <div class="wrapper"><a class="site-title" rel="author" href="/en/">dua3</a><nav class="site-nav">
         <input type="checkbox" id="nav-trigger" class="nav-trigger" />
         <label for="nav-trigger">
           <span class="menu-icon">
@@ -24,7 +24,7 @@
           </span>
         </label>
 
-        <div class="trigger"><a class="page-link" href="/">home</a><a class="page-link" href="/apps">apps</a><a class="page-link" href="/imprint">imprint</a></div>
+        <div class="trigger"><a class="page-link" href="/en/">home</a><a class="page-link" href="/en/apps/index">apps</a><a class="page-link" href="/en/imprint">imprint</a></div>
       </nav></div>
 </header>
 <main class="page-content" aria-label="Content">
@@ -58,7 +58,7 @@
 
       </div>
     </main><footer class="site-footer h-card">
-  <data class="u-url" href="/"></data>
+  <data class="u-url" href="/en/"></data>
 
   <div class="wrapper">
 
