--- a/en/imprint.html
+++ b/en/imprint.html
@@ -24,7 +24,7 @@
           </span>
         </label>
 
-        <div class="trigger"><a class="page-link" href="/en/">home</a><a class="page-link" href="/en/apps">apps</a><a class="page-link" href="/en/imprint">imprint</a></div>
+        <div class="trigger"><a class="page-link" href="/en/">home</a><a class="page-link" href="/en/apps/index">apps</a><a class="page-link" href="/en/imprint">imprint</a></div>
       </nav></div>
 </header>
 <main class="page-content" aria-label="Content">
