--- a/fr/AppIconCreator/index.html
+++ b/fr/AppIconCreator/index.html
@@ -2,10 +2,10 @@
 <html lang="en-US">
   <meta charset="utf-8">
   <title>Redirecting&hellip;</title>
-  <link rel="canonical" href="/fr/apps/AppIconCreator">
-  <script>location="/fr/apps/AppIconCreator"</script>
-  <meta http-equiv="refresh" content="0; url=/fr/apps/AppIconCreator">
+  <link rel="canonical" href="/fr/apps/AppIconCreator/index">
+  <script>location="/fr/apps/AppIconCreator/index"</script>
+  <meta http-equiv="refresh" content="0; url=/fr/apps/AppIconCreator/index">
   <meta name="robots" content="noindex">
   <h1>Redirecting&hellip;</h1>
-  <a href="/fr/apps/AppIconCreator">Click here if you are not redirected.</a>
+  <a href="/fr/apps/AppIconCreator/index">Click here if you are not redirected.</a>
 </html>
