--- a/fr/imprint.html
+++ b/fr/imprint.html
@@ -24,7 +24,7 @@
           </span>
         </label>
 
-        <div class="trigger"><a class="page-link" href="/fr/">home</a><a class="page-link" href="/fr/apps">apps</a><a class="page-link" href="/fr/imprint">imprint</a></div>
+        <div class="trigger"><a class="page-link" href="/fr/">home</a><a class="page-link" href="/fr/apps/index">apps</a><a class="page-link" href="/fr/imprint">imprint</a></div>
       </nav></div>
 </header>
 <main class="page-content" aria-label="Content">
