--- a/apps/AppIconCreator/index.html
+++ b/apps/AppIconCreator/index.html
@@ -33,6 +33,8 @@
 
 <p>Wasting too much time preparing icons for your applications? Do it now with a single click!</p>
 
+<p>Available in the <a href="https://www.microsoft.com/store/apps/9P5MC98T4QCL">Microsoft Store</a>.</p>
+
 <h2 id="features">Features</h2>
 
 <ul>
