--- a/de/apps/AppIconCreator/index.html
+++ b/de/apps/AppIconCreator/index.html
@@ -33,6 +33,8 @@
 
 <p>Das Vorbereiten der Icons für deine App braucht zu viel Zeit? Jetzt geht es mit einem Klick!</p>
 
+<p>Erhältlich im <a href="https://www.microsoft.com/store/apps/9P5MC98T4QCL">Microsoft Store</a>.</p>
+
 <h2 id="eigenschaften">Eigenschaften</h2>
 
 <ul>
