--- a/fr/apps/AppIconCreator/index.html
+++ b/fr/apps/AppIconCreator/index.html
@@ -33,6 +33,8 @@
 
 <p>Un seul clic et tes icônes sont prêtes ! Fini le temps perdu !</p>
 
+<p>Disponible au <a href="https://www.microsoft.com/store/apps/9P5MC98T4QCL">Microsoft Store</a>.</p>
+
 <h2 id="caractéristiques">Caractéristiques</h2>
 
 <ul>
